# protein-tools

./: README.md  pyproject.toml  requirements.txt
Hyperparameters/: chain_classifier.json
Models/: chain_classifier.pickle
src/protein-tools/: datasetmaker.py  embedding_model.py  fastatools.py  mutation_mapper.py  utils.py
src/proteintools/: embedding_model.py  fastatools.py  mutate.py
tests/: cases.py  test_mutation_mapper.py
