[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proteintools"
version = "0.0.1"
authors = [{ name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" }]
description = "A collection of tools for processing protein data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Elliot-D-Hill/protein-tools"
"Bug Tracker" = "https://github.com/Elliot-D-Hill/protein-tools/issues"
