[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proteintools"
version = "0.0.1"
authors = [{ name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" }]
description = "A collection of tools for processing protein data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "biopython==1.79",
  "numpy==1.23.4",
  "pandas==1.5.1",
  "scikit-learn==1.1.3",
  "torch==1.13.0",
  "torchtext==0.14.0",
  "tqdm==4.64.1",
]

[project.optional-dependencies]
tests = ["pandas==1.5.1", "pytest==7.2.0"]

[project.urls]
"Homepage" = "https://github.com/Elliot-D-Hill/protein-tools"
"Bug Tracker" = "https://github.com/Elliot-D-Hill/protein-tools/issues"
